# rag-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  security.yml
docs/: architecture.md  runbook.md  security.md
infra/: docker-compose.test.yml  docker-compose.yml  prometheus.yml
scripts/: benchmark.py  seed_demo.py
src/rag/: __init__.py
src/rag/api/: app.py  dependencies.py  middleware.py
src/rag/api/routers/: documents.py  health.py  query.py
src/rag/api/schemas/: documents.py  query.py
src/rag/core/: config.py  errors.py  logging.py  security.py
src/rag/embedding/: base.py  cache.py  cohere.py
src/rag/generation/: context.py  generator.py  prompts.py
src/rag/ingestion/: chunker.py  metadata.py  pipeline.py
src/rag/ingestion/parsers/: base.py  docx.py  pdf.py  text.py
src/rag/observability/: audit.py  metrics.py  tracing.py
src/rag/retrieval/: dense.py  hybrid.py  reranker.py  sparse.py
src/rag/store/: document_store.py  vector_store.py
tests/: conftest.py
tests/integration/: test_ingest_retrieve.py
tests/unit/: test_acl_filter.py  test_chunker.py  test_chunker_property.py  test_config.py  test_context_packer.py  test_rrf_fusion.py
