[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Production RAG pipeline — hybrid search, ACL, audit logging"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Config / validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Cohere
    "cohere>=5.5.0",

    # Vector store
    "qdrant-client[fastembed]>=1.9.0",

    # Sparse embeddings
    "fastembed>=0.2.7",

    # Caching / rate-limit
    "redis[hiredis]>=5.0.4",

    # Document parsing
    "pypdf>=4.2.0",
    "python-docx>=1.1.2",

    # Chunking / tokenisation
    "nltk>=3.8.1",
    "tiktoken>=0.7.0",

    # Prompt templates
    "jinja2>=3.1.4",

    # Observability
    "structlog>=24.2.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",

    # HTTP client (for respx mocking)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "hypothesis>=6.104.0",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "types-redis>=4.6.0.20240425",
    "types-python-jose>=3.3.4.20240106",
    "types-passlib>=1.7.7.20240327",
    "bandit[toml]>=1.7.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "S",        # flake8-bandit (security)
    "B",        # flake8-bugbear
    "A",        # flake8-builtins
    "C4",       # flake8-comprehensions
    "T20",      # flake8-print
    "RET",      # flake8-return
    "SIM",      # flake8-simplify
    "ARG",      # flake8-unused-arguments
    "PTH",      # flake8-use-pathlib
    "ERA",      # flake8-eradicate
    "PL",       # pylint
    "RUF",      # ruff-specific
]
ignore = [
    "S101",   # assert used in tests
    "PLR0913",# too many arguments (common in FastAPI)
    "PLR2004",# magic number in test comparisons
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG001", "ARG002"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "fastembed.*",
    "nltk.*",
    "docx.*",
]
ignore_missing_stubs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/rag --cov-report=term-missing --cov-fail-under=85"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
